--- a/index.html
+++ b/index.html
@@ -2,111 +2,84 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Everyday Store - MLBB Top-Up</title>
+<title>Everyday Store – MLBB</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <style>
-body {
-  background:#0f172a;
-  font-family: Arial, sans-serif;
-  color:#fff;
+body{
+  margin:0;
+  font-family:Arial,sans-serif;
+  background:#0e1626;
+  color:white;
 }
-
-.container {
+.container{
   max-width:420px;
-  margin:30px auto;
-  background:#111827;
+  margin:auto;
   padding:20px;
-  border-radius:12px;
 }
-
-h2 {
+h1{
   text-align:center;
-  margin-bottom:15px;
+  margin-bottom:20px;
 }
-
-input, select, button {
+input,select,button{
   width:100%;
   padding:12px;
-  margin-top:10px;
-  border-radius:8px;
+  margin:8px 0;
+  border-radius:10px;
   border:none;
   font-size:15px;
 }
-
-input, select {
-  background:#1f2937;
-  color:white;
-}
-
-button {
-  background:#22c55e;
-  color:black;
+button{
+  background:#2ecc71;
   font-weight:bold;
   cursor:pointer;
 }
-
-.qr-box {
-  display:flex;
-  justify-content:center;
-  margin:20px 0;
+.qr-box{
+  text-align:center;
+  margin-top:15px;
 }
-
-.qr-box img {
-  width:180px;
-  height:180px;
+.qr-box img{
+  width:220px;
   border-radius:12px;
+  display:none;
 }
-
-.note {
-  font-size:12px;
-  color:#cbd5e1;
+.note{
+  font-size:13px;
   text-align:center;
+  margin-top:12px;
+  color:#f1c40f;
+}
+#processingBox{
+  display:none;
   margin-top:10px;
-}
-
-#processingBox {
   text-align:center;
-  margin-top:10px;
-  color:#facc15;
 }
-
-.customer-support {
+#successBox{
+  display:none;
+  margin-top:12px;
   text-align:center;
-  margin:15px 0;
+  color:#2ecc71;
 }
-
-.customer-support a {
-  color:#25D366;
-  text-decoration:none;
-  font-weight:bold;
-}
-
-.social-icons {
+.social-icons{
   display:flex;
   justify-content:center;
   gap:14px;
-  margin-top:16px;
+  margin-top:15px;
 }
-
-.social-icons img {
+.social-icons img{
   width:36px;
-  height:36px;
-  border-radius:8px;
 }
 </style>
 </head>
 
 <body>
-
 <div class="container">
-<h2>Everyday Store</h2>
 
-<form onsubmit="return false;">
+<h1>Everyday Store</h1>
 
-<input placeholder="MLBB Player ID" required>
-<input placeholder="Server ID" required>
-<input placeholder="Mobile Number" required>
+<input type="text" placeholder="Player ID">
+<input type="text" placeholder="Server ID">
+<input type="text" placeholder="Mobile Number">
 
 <select id="pack" onchange="updateQR()" required>
   <option value="">Select Pack</option>
@@ -139,82 +112,71 @@ button {
   <option value="qr-weekly-172.png">Weekly Pass + 172 Diamonds – ₹360</option>
   <option value="qr-weekly-2.png">2 Weekly Passes – ₹270</option>
   <option value="qr-weekly-3.png">3 Weekly Passes – ₹399</option>
-  <!-- 🌟 EXCLUSIVE PASSES -->
-<option value="qr-starlight.png">Starlight Card – ₹265</option>
-<option value="qr-twilight.png">Twilight Pass – ₹790</option>
 </select>
 
 <div class="qr-box">
-  <img id="qrImage" style="display:none;">
+  <img id="qrImage">
 </div>
 
-<div class="order-actions">
+<button type="button" onclick="sendOrder()">Order After Payment</button>
 
-  <button type="button" onclick="sendOrder()">
-    Order After Payment
-  </button>
-  <div id="processingBox" style="display:none; margin-top:12px;">
-    ⏳ Processing your order, please wait...
-  </div>
+<div id="processingBox">⏳ Processing your order, please wait...</div>
 
-</div>
-
-<div class="customer-support">
-<a href="https://wa.me/917679393645" target="_blank">
-📞 Customer Support: +91 76793 93645
-</a>
-</div>
-
-<div class="social-icons">
-<a href="https://www.instagram.com/everyday_store_official" target="_blank">
-<img src="https://cdn-icons-png.flaticon.com/512/2111/2111463.png">
-</a>
-
-<a href="https://youtube.com/@everydaystore-d4w" target="_blank">
-<img src="https://cdn-icons-png.flaticon.com/512/1384/1384060.png">
-</a>
-
-<a href="https://chat.whatsapp.com/.png">
-</a>
+<div id="successBox">
+  ✅ Order placed successfully<br>
+  <b>Order ID:</b> <span id="orderIdText"></span><br><br>
+  Please tap <b>SEND</b> in Gmail to confirm.
 </div>
 
 <div class="note">
-⚠️ Please tap <b>SEND</b> in Gmail to complete your order
+⚠ QR appears automatically after selecting a pack
 </div>
 
-<div id="successBox" class="note" style="display:none;">
-✅ Order placed successfully!<br><br>
-<b>Order ID:</b> <span id="orderIdText"></span><br><br>
-Please tap <b>SEND</b> in Gmail to confirm.
+<div class="social-icons">
+  <a href="https://www.instagram.com/everyday_store_official" target="_blank">
+    <img src="https://cdn-icons-png.flaticon.com/512/2111/2111463.png">
+  </a>
+  <a href="https://youtube.com/@everydaystore-d4w" target="_blank">
+    <img src="https://cdn-icons-png.flaticon.com/512/1384/1384060.png">
+  </a>
+  <a href="https://wa.me/917679393645" target="_blank">
+    <img src="https://cdn-icons-png.flaticon.com/512/733/733585.png">
+  </a>
 </div>
 
 </div>
 
 <script>
-<script>
-function updateQR() {
+function updateQR(){
   const pack = document.getElementById("pack");
   const qr = document.getElementById("qrImage");
 
-  if (pack.value !== "") {
-    qr.src = "./qr/" + pack.value;
+  if(pack.value !== ""){
+    qr.src = "qr/" + pack.value;
     qr.style.display = "block";
-  } else {
+  }else{
     qr.style.display = "none";
   }
 }
 
-function sendOrder() {
-  const processingBox = document.getElementById("processingBox");
-  processingBox.style.display = "block";
+function sendOrder(){
+  const processing = document.getElementById("processingBox");
+  const success = document.getElementById("successBox");
 
-  setTimeout(() => {
-    processingBox.style.display = "none";
-    document.getElementById("successBox").style.display = "block";
+  processing.style.display = "block";
+  success.style.display = "none";
+
+  setTimeout(()=>{
+    processing.style.display = "none";
+    success.style.display = "block";
     document.getElementById("orderIdText").innerText =
       "ORD-" + Date.now();
-  }, 1200);
+
+    window.location.href =
+      "mailto:storeeveryday26@gmail.com?subject=New MLBB Order";
+  },1200);
 }
 </script>
+
 </body>
 </html>
