--- a/index.html
+++ b/index.html
@@ -109,9 +109,8 @@ button{
 
   <!-- 🔥 WEEKLY PASS DEALS -->
   <option value="qr-weekly-1.png">1 Weekly Pass – ₹135</option>
-  <option value="qr-weekly-172.png">Weekly Pass + 172 Diamonds – ₹360</option>
-  <option value="qr-weekly-2.png">2 Weekly Passes – ₹270</option>
-  <option value="qr-weekly-3.png">3 Weekly Passes – ₹399</option>
+  <option value="qr-weekly-172.png">1 Weekly Pass + 172 Diamonds – ₹360</option>
+  <option value="qr-weekly-2.png">2 Weekly Passes – ₹266</option>
 </select>
 
 <div class="qr-box">
