--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@ button{
   <option value="qr-weekly-1.png">1 Weekly Pass – ₹135</option>
   <option value="qr-weekly-172.png">1 Weekly Pass + 172 Diamonds – ₹360</option>
   <option value="qr-weekly-2.png">2 Weekly Passes – ₹266</option>
+  <option value="qr-twilight.png">Twilight Pass – ₹790</option>
 </select>
 
 <div class="qr-box">
