--- a/index.html
+++ b/index.html
@@ -190,18 +190,23 @@ function sendOrder() {
     const orderId = "ORD-" + Date.now();
     document.getElementById("orderIdText").innerText = orderId;
 
-    window.location.href =
-      "mailto:storeeveryday26@gmail.com" +
-      "?subject=New MLBB Order" +
-      "&body=" +
-      encodeURIComponent(
-        "Order ID: " + orderId + "\n" +
-        "Player ID: " + playerID + "\n" +
-        "Server ID: " + serverID + "\n" +
-        "Mobile: " + mobile + "\n" +
-        "Pack: " + packSelect.options[packSelect.selectedIndex].text
-      );
-  }, 1500);
+    const mailLink =
+  "mailto:storeeveryday26@gmail.com" +
+  "?subject=New MLBB Order" +
+  "&body=" + encodeURIComponent(
+    "Order ID: " + orderId + "\n" +
+    "Player ID: " + playerID + "\n" +
+    "Server ID: " + serverID + "\n" +
+    "Mobile: " + mobile + "\n" +
+    "Pack: " + packSelect.options[packSelect.selectedIndex].text
+  );
+
+window.location.href = mailLink;
+
+// 🔒 FORCE REDIRECT AFTER GMAIL
+setTimeout(() => {
+  window.location.href = "done.html";
+}, 800);
 }
 </script>
 
