--- a/index.html
+++ b/index.html
@@ -169,8 +169,8 @@ function updateQR() {
 
   <script>
 function sendOrder() {
-  const playerID = document.getElementById("playerId").value.trim();
-  const serverID = document.getElementById("serverId").value.trim();
+  const playerID = document.getElementById("playerID").value.trim();
+  const serverID = document.getElementById("serverID").value.trim();
   const mobile = document.getElementById("mobile").value.trim();
   const packSelect = document.getElementById("pack");
 
@@ -181,45 +181,40 @@ function sendOrder() {
     packSelect.value === ""
   ) {
     alert("Please fill all details and select a pack");
-    return; // ⛔ STOPS ORDER
+    return;
   }
 
-  const processingBox = document.getElementById("processingBox");
-  const successBox = document.getElementById("successBox");
+  // LOCK ORDER
+  sessionStorage.setItem("orderDone", "true");
 
-  processingBox.style.display = "block";
-  successBox.style.display = "none";
+  const orderId = "ORD-" + Date.now();
 
-  setTimeout(() => {
-    processingBox.style.display = "none";
-    successBox.style.display = "block";
+  const mailLink =
+    "mailto:storeeveryday26@gmail.com" +
+    "?subject=New MLBB Order" +
+    "&body=" +
+    encodeURIComponent(
+      "Order ID: " + orderId + "\n" +
+      "Player ID: " + playerID + "\n" +
+      "Server ID: " + serverID + "\n" +
+      "Mobile: " + mobile + "\n" +
+      "Pack: " + packSelect.options[packSelect.selectedIndex].text
+    );
 
-    const orderId = "ORD-" + Date.now();
-    document.getElementById("orderIdText").innerText = orderId;
+  // ✅ SHOW GMAIL BUTTON
+document.getElementById("mailBtn").href = mailLink;
+document.getElementById("mailBtn").style.display = "block";
 
-    const mailLink =
-  "mailto:storeeveryday26@gmail.com" +
-  "?subject=New MLBB Order" +
-  "&body=" + encodeURIComponent(
-    "Order ID: " + orderId + "\n" +
-    "Player ID: " + playerID + "\n" +
-    "Server ID: " + serverID + "\n" +
-    "Mobile: " + mobile + "\n" +
-    "Pack: " + packSelect.options[packSelect.selectedIndex].text
- ) 
-
-    // ✅ LOCK ORDER
-sessionStorage.setItem("orderDone", "true");
-
-// 📧 OPEN GMAIL (USER ACTION CONTEXT)
-window.location.href = mailLink;
-
-// ⏳ GIVE BROWSER TIME TO OPEN GMAIL
+// ✅ REDIRECT AFTER 1.5s
 setTimeout(() => {
-  window.location.replace("done.html");
-}, 2500);
+  window.location.href = "done.html";
+}, 1500);
 }
 </script>
-
+<p style="text-align:center;color:#f1c40f;">
+⚠️ If Gmail doesn’t open, tap ⋮ and choose <b>Open in Browser</b>
+</p>
+  
 </body>
 </html>
+   
