--- a/index.html
+++ b/index.html
@@ -7,23 +7,13 @@
 
 <style>
 body{
-  margin:0;
-  font-family:Arial, sans-serif;
-  background:linear-gradient(#0b132b,#1c2541);
-  color:white;
-  text-align:center;
+  background:#0b1220;
+  color:#fff;
+  font-family:sans-serif;
+  padding:16px;
 }
-
-h1{
-  margin-top:20px;
-  font-family:cursive;
-}
-
-.container{
-  padding:20px;
-}
-
-input, select{
+h1{text-align:center}
+input,select,button{
   width:100%;
   padding:14px;
   margin:10px 0;
@@ -31,45 +21,25 @@ input, select{
   border:none;
   font-size:16px;
 }
-
-#qrImage{
-  display:none;
-  width:260px;
-  margin:20px auto;
-  border-radius:16px;
-}
-
 button{
-  width:100%;
-  padding:14px;
-  border:none;
-  border-radius:14px;
-  font-size:16px;
-  font-weight:bold;
-  cursor:pointer;
-}
-
-#orderBtn{
   background:#2ecc71;
-  color:black;
+  color:#000;
+  font-weight:bold;
 }
-
-#gmailBtn{
+#mailBtn{
   background:#ff4b4b;
-  color:white;
-  margin-top:12px;
+  color:#fff;
   display:none;
 }
-
-.note{
-  margin-top:10px;
-  font-size:14px;
-  color:#f1c40f;
+#qrImage{
+  width:100%;
+  border-radius:16px;
+  display:none;
 }
-
-.social img{
-  width:40px;
-  margin:10px;
+.note{
+  text-align:center;
+  color:#f1c40f;
+  margin-top:8px;
 }
 </style>
 </head>
@@ -77,8 +47,6 @@ button{
 <body>
 
 <h1>Everyday Store</h1>
-
-<div class="container">
 
 <input id="playerID" placeholder="Player ID">
 <input id="serverID" placeholder="Server ID">
@@ -119,82 +87,71 @@ button{
 
 <img id="qrImage">
 
-<button id="orderBtn" onclick="prepareOrder()">Order After Payment</button>
+<button onclick="sendOrder()">Order After Payment</button>
 
-<a id="gmailLink" target="_blank">
-  <button id="gmailBtn">📧 SEND ORDER VIA GMAIL</button>
+<div class="note">QR appears automatically after selecting a pack</div>
+
+<a id="mailBtn" target="_blank">
+  <button id="mailBtnInner">📧 SEND ORDER VIA GMAIL</button>
 </a>
 
-<div class="note">⚠️ QR appears automatically after selecting a pack</div>
-
-<div class="social">
-  <a href="https://www.instagram.com/everyday_store_official" target="_blank">
-    <img src="https://cdn-icons-png.flaticon.com/512/2111/2111463.png">
-  </a>
-  <a href="https://youtube.com/@everydaystore-d4w" target="_blank">
-    <img src="https://cdn-icons-png.flaticon.com/512/1384/1384060.png">
-  </a>
-  <a href="https://wa.me/917679393645" target="_blank">
-    <img src="https://cdn-icons-png.flaticon.com/512/733/733585.png">
-  </a>
-</div>
-
-<p class="note">⚠️ If Gmail doesn’t open, tap ⋮ → Open in browser</p>
-
-</div>
+<p class="note">If Gmail doesn’t open, tap ⋮ → Open in Browser</p>
 
 <script>
-/* BLOCK REUSE */
+// 🔒 BLOCK REPEAT ORDER
 if(sessionStorage.getItem("orderDone")){
-  alert("⚠️ Order already submitted");
-  location.href="done.html";
+  alert("⚠️ Order already submitted. Please wait for confirmation.");
+  window.location.href = "done.html";
 }
 
-/* QR */
+// 📷 QR HANDLER
 function updateQR(){
-  const pack=document.getElementById("pack");
-  const qr=document.getElementById("qrImage");
-  if(pack.value){
-    qr.src=pack.value;
-    qr.style.display="block";
+  const pack = document.getElementById("pack").value;
+  const qr = document.getElementById("qrImage");
+
+  if(pack){
+    qr.src = pack;
+    qr.style.display = "block";
   }else{
-    qr.style.display="none";
+    qr.style.display = "none";
   }
 }
 
-/* PREPARE ORDER */
-function prepareOrder(){
-  const playerID=playerID=document.getElementById("playerID").value.trim();
-  const serverID=document.getElementById("serverID").value.trim();
-  const mobile=document.getElementById("mobile").value.trim();
-  const pack=document.getElementById("pack");
+// 📦 SEND ORDER
+function sendOrder(){
+  const playerID = document.getElementById("playerID").value.trim();
+  const serverID = document.getElementById("serverID").value.trim();
+  const mobile = document.getElementById("mobile").value.trim();
+  const pack = document.getElementById("pack");
 
   if(!playerID || !serverID || !mobile || !pack.value){
-    alert("Fill all details");
+    alert("Please fill all details");
     return;
   }
 
   sessionStorage.setItem("orderDone","true");
 
-  const orderId="ORD-"+Date.now();
+  const orderId = "ORD-" + Date.now();
 
-  const mailto=
-    "mailto:storeeveryday26@gmail.com"+
-    "?subject=New MLBB Order"+
-    "&body="+encodeURIComponent(
-      "Order ID: "+orderId+"\n"+
-      "Player ID: "+playerID+"\n"+
-      "Server ID: "+serverID+"\n"+
-      "Mobile: "+mobile+"\n"+
-      "Pack: "+pack.options[pack.selectedIndex].text
+  const mailLink =
+    "mailto:storeeveryday26@gmail.com" +
+    "?subject=New MLBB Order" +
+    "&body=" + encodeURIComponent(
+      "Order ID: " + orderId + "\n" +
+      "Player ID: " + playerID + "\n" +
+      "Server ID: " + serverID + "\n" +
+      "Mobile: " + mobile + "\n" +
+      "Pack: " + pack.options[pack.selectedIndex].text
     );
 
-  const link=document.getElementById("gmailLink");
-  link.href=mailto;
+  const mailBtn = document.getElementById("mailBtn");
+  mailBtn.href = mailLink;
+  mailBtn.style.display = "block";
 
-  document.getElementById("gmailBtn").style.display="block";
-
-  alert("Now tap RED button to send order via Gmail");
+  // optional redirect after user action
+  setTimeout(()=>{
+    window.location.href="done.html";
+  },3000);
 }
 </script>
 
