--- a/index.html
+++ b/index.html
@@ -2,156 +2,165 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Everyday Store</title>
+<title>Everyday Store – MLBB</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <style>
 body{
-  background:#0b1220;
-  color:#fff;
-  font-family:sans-serif;
-  padding:16px;
+  margin:0;
+  font-family:Arial,sans-serif;
+  background:#0e1626;
+  color:white;
 }
-h1{text-align:center}
+.container{
+  max-width:420px;
+  margin:auto;
+  padding:20px;
+}
+h1{
+  text-align:center;
+  margin-bottom:20px;
+}
 input,select,button{
   width:100%;
-  padding:14px;
-  margin:10px 0;
-  border-radius:12px;
+  padding:12px;
+  margin:8px 0;
+  border-radius:10px;
   border:none;
-  font-size:16px;
+  font-size:15px;
 }
 button{
   background:#2ecc71;
-  color:#000;
   font-weight:bold;
+  cursor:pointer;
 }
-#mailBtn{
-  background:#ff4b4b;
-  color:#fff;
-  display:none;
+.qr-box{
+  text-align:center;
+  margin-top:15px;
 }
-#qrImage{
-  width:100%;
-  border-radius:16px;
+.qr-box img{
+  width:220px;
+  border-radius:12px;
   display:none;
 }
 .note{
+  font-size:13px;
   text-align:center;
+  margin-top:12px;
   color:#f1c40f;
-  margin-top:8px;
+}
+#processingBox{
+  display:none;
+  margin-top:10px;
+  text-align:center;
+}
+#successBox{
+  display:none;
+  margin-top:12px;
+  text-align:center;
+  color:#2ecc71;
+}
+.social-icons{
+  display:flex;
+  justify-content:center;
+  gap:14px;
+  margin-top:15px;
+}
+.social-icons img{
+  width:36px;
 }
 </style>
 </head>
 
 <body>
+<div class="container">
 
 <h1>Everyday Store</h1>
 
-<input id="playerID" placeholder="Player ID">
-<input id="serverID" placeholder="Server ID">
-<input id="mobile" placeholder="Mobile Number">
+<input type="text" placeholder="Player ID">
+<input type="text" placeholder="Server ID">
+<input type="text" placeholder="Mobile Number">
 
-<select id="pack" onchange="updateQR()" required>
+<select id="pack" onchange="updateQR()">
   <option value="">Select Pack</option>
 
-  <!-- 🔥 SMALL PACKS -->
-  <option value="qr-3.png">3 Diamonds – ₹8</option>
-  <option value="qr-5.png">5 Diamonds – ₹12</option>
   <option value="qr-11.png">11 Diamonds – ₹23</option>
   <option value="qr-22.png">22 Diamonds – ₹35</option>
-
-  <!-- 🌈 MEDIUM PACKS -->
   <option value="qr-55.png">55 Diamonds – ₹81</option>
   <option value="qr-86.png">86 Diamonds – ₹118</option>
   <option value="qr-112.png">112 Diamonds – ₹155</option>
   <option value="qr-172.png">172 Diamonds – ₹227</option>
   <option value="qr-257.png">257 Diamonds – ₹319</option>
 
-  <!-- 💥 LARGE PACKS -->
-  <option value="qr-514.png">514 Diamonds – ₹637</option>
-  <option value="qr-706.png">706 Diamonds – ₹855</option>
-  <option value="qr-1050.png">1050 Diamonds – ₹1275</option>
-  <option value="qr-1135.png">1135 Diamonds – ₹1385</option>
-  <option value="qr-2195.png">2195 Diamonds – ₹2560</option>
-  <option value="qr-3688.png">3688 Diamonds – ₹4475</option>
-  <option value="qr-5532.png">5532 Diamonds – ₹6450</option>
-  <option value="qr-9288.png">9288 Diamonds – ₹10950</option>
-
-  <!-- 🔥 WEEKLY PASS DEALS -->
   <option value="qr-weekly-1.png">1 Weekly Pass – ₹135</option>
-  <option value="qr-weekly-172.png">1 Weekly Pass + 172 Diamonds – ₹360</option>
-  <option value="qr-weekly-2.png">2 Weekly Passes – ₹266</option>
-  <option value="qr-twilight.png">Twilight Pass - ₹790</option>
+  <option value="qr-weekly-2.png">2 Weekly Passes – ₹270</option>
+  <option value="qr-weekly-3.png">3 Weekly Passes – ₹399</option>
+
+  <option value="qr-starlight.png">Starlight Card – ₹265</option>
+  <option value="qr-twilight.png">Twilight Pass – ₹790</option>
 </select>
 
-<img id="qrImage">
+<div class="qr-box">
+  <img id="qrImage">
+</div>
 
-<button onclick="sendOrder()">Order After Payment</button>
+<button type="button" onclick="sendOrder()">Order After Payment</button>
 
-<div class="note">QR appears automatically after selecting a pack</div>
+<div id="processingBox">⏳ Processing your order, please wait...</div>
 
-<a id="mailBtn" target="_blank">
-  <button id="mailBtnInner">📧 SEND ORDER VIA GMAIL</button>
-</a>
+<div id="successBox">
+  ✅ Order placed successfully<br>
+  <b>Order ID:</b> <span id="orderIdText"></span><br><br>
+  Please tap <b>SEND</b> in Gmail to confirm.
+</div>
 
-<p class="note">If Gmail doesn’t open, tap ⋮ → Open in Browser</p>
+<div class="note">
+⚠ QR appears automatically after selecting a pack
+</div>
+
+<div class="social-icons">
+  <a href="https://www.instagram.com/everyday_store_official" target="_blank">
+    <img src="https://cdn-icons-png.flaticon.com/512/2111/2111463.png">
+  </a>
+  <a href="https://youtube.com/@everydaystore-d4w" target="_blank">
+    <img src="https://cdn-icons-png.flaticon.com/512/1384/1384060.png">
+  </a>
+  <a href="https://wa.me/917679393645" target="_blank">
+    <img src="https://cdn-icons-png.flaticon.com/512/733/733585.png">
+  </a>
+</div>
+
+</div>
 
 <script>
-// 🔒 BLOCK REPEAT ORDER
-if(sessionStorage.getItem("orderDone")){
-  alert("⚠️ Order already submitted. Please wait for confirmation.");
-  window.location.href = "done.html";
-}
-
-// 📷 QR HANDLER
 function updateQR(){
-  const pack = document.getElementById("pack").value;
+  const pack = document.getElementById("pack");
   const qr = document.getElementById("qrImage");
 
-  if(pack){
-    qr.src = pack;
+  if(pack.value !== ""){
+    qr.src = "qr/" + pack.value;
     qr.style.display = "block";
   }else{
     qr.style.display = "none";
   }
 }
 
-// 📦 SEND ORDER
 function sendOrder(){
-  const playerID = document.getElementById("playerID").value.trim();
-  const serverID = document.getElementById("serverID").value.trim();
-  const mobile = document.getElementById("mobile").value.trim();
-  const pack = document.getElementById("pack");
+  const processing = document.getElementById("processingBox");
+  const success = document.getElementById("successBox");
 
-  if(!playerID || !serverID || !mobile || !pack.value){
-    alert("Please fill all details");
-    return;
-  }
+  processing.style.display = "block";
+  success.style.display = "none";
 
-  sessionStorage.setItem("orderDone","true");
-
-  const orderId = "ORD-" + Date.now();
-
-  const mailLink =
-    "mailto:storeeveryday26@gmail.com" +
-    "?subject=New MLBB Order" +
-    "&body=" + encodeURIComponent(
-      "Order ID: " + orderId + "\n" +
-      "Player ID: " + playerID + "\n" +
-      "Server ID: " + serverID + "\n" +
-      "Mobile: " + mobile + "\n" +
-      "Pack: " + pack.options[pack.selectedIndex].text
-    );
-
-  const mailBtn = document.getElementById("mailBtn");
-  mailBtn.href = mailLink;
-  mailBtn.style.display = "block";
-
-  // optional redirect after user action
   setTimeout(()=>{
-    window.location.href="done.html";
-  },3000);
+    processing.style.display = "none";
+    success.style.display = "block";
+    document.getElementById("orderIdText").innerText =
+      "ORD-" + Date.now();
+
+    window.location.href =
+      "mailto:storeeveryday26@gmail.com?subject=New MLBB Order";
+  },1200);
 }
 </script>
 
