--- a/index.html
+++ b/index.html
@@ -91,10 +91,9 @@ button{
   <option value="qr-112.png">112 Diamonds – ₹155</option>
   <option value="qr-172.png">172 Diamonds – ₹227</option>
   <option value="qr-257.png">257 Diamonds – ₹319</option>
-
-  <option value="qr-weekly-1.png">1 Weekly Pass – ₹135</option>
-  <option value="qr-weekly-2.png">2 Weekly Passes – ₹270</option>
-  <option value="qr-weekly-3.png">3 Weekly Passes – ₹399</option>
+   <optio value="qr-weekly-1.png">1 Weekly Pass – ₹135</option>
+  <option value="qr-weekly-172.png">1 Weekly Pass + 172 Diamonds – ₹360</option>
+  <option value="qr-weekly-2.png">2 Weekly Passes – ₹266</option>
 
   <option value="qr-starlight.png">Starlight Card – ₹265</option>
   <option value="qr-twilight.png">Twilight Pass – ₹790</option>
