--- a/index.html
+++ b/index.html
@@ -189,22 +189,37 @@ function sendOrder() {
     document.getElementById("successBox").style.display = "block";
 
     // ✅ GMAIL OPENS ONLY AFTER VALIDATION
-    window.location.href =
-      "mailto:storeeveryday26@gmail.com" +
-      "?subject=New MLBB Order" +
-      "&body=" +
-      encodeURIComponent(
-        "Order ID: " + orderId + "\n" +
-        "Player ID: " + playerID + "\n" +
-        "Server ID: " + serverID + "\n" +
-        "Mobile: " + mobile + "\n" +
-        "Pack: " + pack
-      );
-  }, 1200);
-}
-</script>
-  
- 
+    setTimeout(() => {
+  window.location.href = "done.html";
+}, 800);
+      const mailLink =
+  "mailto:storeeveryday26@gmail.com" +
+  "?subject=New MLBB Order" +
+  "&body=" + encodeURIComponent(
+    "Order ID: " + orderId + "\n" +
+    "Player ID: " + playerID + "\n" +
+    "Server ID: " + serverID + "\n" +
+    "Mobile: " + mobile + "\n" +
+    "Pack: " + packSelect.options[packSelect.selectedIndex].text
+  );
 
-</body>
-</html>
+// ✅ LOCK ORDER
+sessionStorage.setItem("orderDone", "true");
+
+// 📧 OPEN GMAIL (USER ACTION CONTEXT)
+window.location.href = mailLink;
+
+// ⏳ GIVE BROWSER TIME TO OPEN GMAIL
+setTimeout(() => {
+  window.location.replace("done.html");
+}, 2500);
+ 
+   <script>
+   setTimeout(() => {
+     window.location.href = "index.html";
+   }, 10000);
+   </script>
+  
+   </body>
+
+   </html>
